# medinovai-evidence-store

./: .env.example  .gitignore  AUDIT_TRAIL.md  CLAUDE.md  Dockerfile  README.md  claude-progress.txt  docker-compose.yml  feature_list.json  init.sh  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: compliance-check.md  end-session.md  start-session.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250330_0001_initial_evidence_schema.py  20250330_0002_provenance_edges.py
config/: fda-compliance.yaml
schemas/: artifact.json
src/: __init__.py  settings.py  temporal_worker.py  worker.py
src/api/: app.py  deps.py  state.py
src/api/routes/: artifacts.py  audit.py  health.py  signatures.py  studies.py
src/compliance/: __init__.py  audit_trail.py  data_integrity.py  electronic_signature.py  fda_records.py
src/db/: __init__.py  connection.py  models.py  repository.py
src/lineage/: __init__.py  artifact_store.py  provenance_graph.py  reproducibility_bundle.py
src/workflows/: __init__.py  activities.py  sigure_tasks.py  study_lifecycle.py
temporal/: README.md  dynamicconfig.yaml
tests/: __init__.py  conftest.py  test_health.py
