[project]
name = "medinovai-evidence-store"
version = "0.1.0"
description = "Phase F Tier 1 — Evidence store with Temporal and 21 CFR Part 11 compliance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
